# Chess-in-C

./: CMakeLists.txt  README.md  board.c  board.h  main.c  makefile  misc.c  misc.h
src/: board.c  board.h  magic_numbers.c  magic_numbers.h  main.c  misc.c  misc.h  perft.c  perft.h  search.c  search.h
tests/: test_board.c
